--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name = "bgbeige">#F3E5C8</color>
-    <color name = "mug">#5D4127</color>
-    <color name="Red">#7E0215</color>
+
+    <color name = "bgbeige">#FEF9E1</color>
+    <color name = "bg">#E5D0AC</color>
+    <color name="Red">#A31D1D</color>
+    <color name="Maroon">#6D2323</color>
 </resources>
